--- a/modules/3-S/day2.tex
+++ b/modules/3-S/day2.tex
@@ -4,8 +4,9 @@
 \begin{applicationActivities}{2}{13}
 
 \begin{activity}{10}
-  (take basis shown to be linearly independent in previous day, and
-  show that it spans)
+  Last time we saw that \(\left\{
+  x^3+1,x^2+2,4-7x,2x^3+x
+  \right\}\) is linearly independent. Show that it spans \(\P^3\).
 \end{activity}
 
 \begin{definition}
@@ -13,14 +14,10 @@
 \end{definition}
 
 \begin{observation}
-  A basis may be thought of as building blocks for a vector space, since
-  every vector in the space can be expressed as a unique linear combination
-  of basis vectors.
+  A basis may be thought of as a collection of building blocks for a vector
+  space, since every vector in the space can be expressed as a unique linear
+  combination of basis vectors.
 \end{observation}
-
-\begin{activity}{10}
-  (given four sets of general vectors, identify which are bases and which aren't)
-\end{activity}
 
 \begin{activity}{10}
   If \(\{\vect v_1,\vect v_2,\vect v_3,\vect v_4\}\) is a basis for
@@ -39,17 +36,88 @@
     \vdots&\vdots&\ddots&\vdots\\
     0&0&\dots&1
   \end{bmatrix}
-  \)
+  \).
+
+  That is, a basis for \(\IR^n\) must have exactly \(n\) vectors and
+  its square matrix must row-reduce to the \term{identity matrix}
+  containing all zeros except for a downward diagonal of ones.
 \end{fact}
 
-\begin{activity}{10}
-  (given four sets of \(IR^5\) vectors, identify which are bases and which
-  aren't)
+\begin{activity}{15}
+  Which of the following sets are bases for \(\IR^4\)?
+  \begin{multicols}{3}\small
+  \begin{enumerate}[a)]
+    \item \(\left\{
+    \begin{bmatrix}1\\0\\0\\0\end{bmatrix},
+    \begin{bmatrix}0\\1\\0\\0\end{bmatrix},
+    \begin{bmatrix}0\\0\\1\\0\end{bmatrix},
+    \begin{bmatrix}0\\0\\0\\1\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\left\{
+    \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+    \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
+    \begin{bmatrix}-3\\0\\1\\3\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\left\{
+    \begin{bmatrix}5\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}-2\\1\\0\\3\end{bmatrix},
+    \begin{bmatrix}4\\5\\1\\3\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\left\{
+    \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+    \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
+    \begin{bmatrix}-1\\10\\7\\14\end{bmatrix},
+    \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\left\{
+    \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
+    \begin{bmatrix}-3\\0\\1\\3\end{bmatrix},
+    \begin{bmatrix}3\\6\\1\\5\end{bmatrix}
+    \right\}
+    \)
+  \end{enumerate}
+  \end{multicols}
 \end{activity}
 
 \begin{activity}{10}
-  How can \{u,v,u+v\} (but with numbers) be changed to make it
-  linearly independent?
+  Consider the set \(\left\{
+  \begin{bmatrix}2\\3\\0\\1\end{bmatrix},
+  \begin{bmatrix}2\\0\\1\\-1\end{bmatrix},
+  \begin{bmatrix}2\\-3\\2\\-3\end{bmatrix},
+  \begin{bmatrix}1\\5\\-1\\0\end{bmatrix}
+  \right\}
+  \).
+
+  \begin{subactivity}
+    Use \(\RREF\begin{bmatrix}
+    2&2&2&1\\
+    3&0&-3&5\\
+    0&1&2&-1\\
+    1&-1&-3&0
+    \end{bmatrix}\) to identify which vector may be removed to make the set
+    linearly independent.
+  \end{subactivity}
+
+  \begin{subactivity}
+    Find a basis for \(\vspan\left\{
+    \begin{bmatrix}2\\3\\0\\1\end{bmatrix},
+    \begin{bmatrix}2\\0\\1\\-1\end{bmatrix},
+    \begin{bmatrix}2\\-3\\2\\-3\end{bmatrix},
+    \begin{bmatrix}1\\5\\-1\\0\end{bmatrix}
+    \right\}
+    \).
+  \end{subactivity}
 \end{activity}
 
 \end{applicationActivities}
