--- a/modules/3-S/day3.tex
+++ b/modules/3-S/day3.tex
@@ -3,10 +3,6 @@
 
 \begin{applicationActivities}{3}{14}
 
-\begin{activity}{10}
-  (discover that the redundant vectors are non-pivot columns)
-\end{activity}
-
 \begin{fact}
   To compute a basis for the subspace \(\vspan\{\vect v_1,\dots,\vect v_m\}\),
   simply remove the vectors corresponding to the non-pivot columns of
@@ -14,17 +10,20 @@
 \end{fact}
 
 \begin{activity}{10}
-  (find ALL the bases for span S that are subsets of S)
+  Find all subsets of \(S=\left\{
+  \begin{bmatrix}2\\3\\0\\1\end{bmatrix},
+  \begin{bmatrix}2\\0\\1\\-1\end{bmatrix},
+  \begin{bmatrix}2\\-3\\2\\-3\end{bmatrix},
+  \begin{bmatrix}1\\5\\-1\\0\end{bmatrix}
+  \right\}
+  \) that are a basis for \(\vspan S\) by changing the order
+  of the vectors in \(S\).
 \end{activity}
 
-\begin{fact}
-  All bases for a vector space are the same size.
-\end{fact}
-
 \begin{activity}{10}
-  Prove that if \(\{\vect v\}\) is a basis for \(V\),
-  then \(\{\vect w_1,\vect w_2\}\) is linearly dependent (assuming
-  \(\vect w_1\not=\vect w_2\)).
+  Assume \(\vect w_1\not=\vect w_2\) are distinct vectors in \(V\),
+  which has a basis containing a single vector: \(\{\vect v\}\).
+  Could \(\{\vect w_1,\vect w_2\}\) be a basis?
 \end{activity}
 
 \begin{fact}
@@ -36,31 +35,105 @@
   of any basis for the vector space.
 \end{definition}
 
-\begin{activity}{10}
-  Reduce a bunch of spans to bases to find their dimension.
+\begin{activity}{15}
+  Find the dimension of each subspace of \(\IR^4\).
+  \begin{multicols}{3}\small
+  \begin{enumerate}[a)]
+    \item \(\vspan\left\{
+    \begin{bmatrix}1\\0\\0\\0\end{bmatrix},
+    \begin{bmatrix}0\\1\\0\\0\end{bmatrix},
+    \begin{bmatrix}0\\0\\1\\0\end{bmatrix},
+    \begin{bmatrix}0\\0\\0\\1\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\vspan\left\{
+    \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+    \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
+    \begin{bmatrix}-3\\0\\1\\3\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\vspan\left\{
+    \begin{bmatrix}5\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}-2\\1\\0\\3\end{bmatrix},
+    \begin{bmatrix}4\\5\\1\\3\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\vspan\left\{
+    \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+    \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
+    \begin{bmatrix}-1\\10\\7\\14\end{bmatrix},
+    \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
+    \right\}
+    \)
+
+    \item \(\vspan\left\{
+    \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+    \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
+    \begin{bmatrix}-3\\0\\1\\3\end{bmatrix},
+    \begin{bmatrix}3\\6\\1\\5\end{bmatrix}
+    \right\}
+    \)
+  \end{enumerate}
+  \end{multicols}
 \end{activity}
 
 \begin{activity}{5}
-  What is the dimension of the vector space of \(7\)th-degree polynomials
-  \(\P^7\)?
+  What is the dimension of the vector space of \(7\)th-degree (or less)
+  polynomials \(\P^7\)?
+  \begin{multicols}{4}
+    \begin{enumerate}[a)]
+      \item 6
+      \item 7
+      \item 8
+      \item infinite
+    \end{enumerate}
+  \end{multicols}
 \end{activity}
 
 \begin{activity}{5}
-  What is the dimension of the vector space of polynomials
+  What is the dimension of the vector space of all polynomials
   \(\P\)?
+  \begin{multicols}{4}
+    \begin{enumerate}[a)]
+      \item 6
+      \item 7
+      \item 8
+      \item infinite
+    \end{enumerate}
+  \end{multicols}
 \end{activity}
 
 \begin{observation}
   Several interesting vector spaces are infinite-dimensional:
   \begin{itemize}
-    \item The space of polynomials \(\P\)
-    \item The space of real number sequences \(\IR^\infty\)
-    \item The space of continuous functions \(C(\IR)\)
+    \item The space of polynomials \(\P\) (consider the set
+          \(\{1,x,x^2,x^3,\dots\}\)).
+    \item The space of continuous functions \(C(\IR)\) (which contains
+          all polynomials, in addition to other functions like
+          \(e^x=1+x+x^2/2+x^3/3+\dots\)).
+    \item The space of real number sequences \(\IR^\infty\) (consider
+          the set \(\{(1,0,0,\dots),(0,1,0,\dots),(0,0,1,\dots),\dots\}\)).
   \end{itemize}
 \end{observation}
 
 \begin{fact}
-  Every vector space with dimension \(n<\infty\) is isomorphic to \(\IR^n\).
+  Every vector space with finite dimension, that is, every
+  vector space with a basis of the form
+  \(\{\vect v_1,\vect v_2,\dots,\vect v_n\}\) is isomorphic to a
+  Euclidean space \(\IR^n\):
+
+  \[
+    c_1\vect v_1+c_2\vect v_2+\dots+c_n\vect v_n
+    \leftrightarrow
+    \begin{bmatrix}
+      c_1\\c_2\\\vdots\\c_n
+    \end{bmatrix}
+  \]
 \end{fact}
 
 \end{applicationActivities}
